# Dungeon-Game

./: CMakeLists.txt
src/c/: PreImports.h  main.cpp
src/c/card/: Card.cpp  Card.h  Cards.cpp  Cards.h  GameEffectManager.cpp  GameEffectManager.h
src/c/misc/: Config.cpp  Config.h
src/c/objects/: GameObject.cpp  GameObject.h
src/c/objects/type/: MapPartObject.cpp  MapPartObject.h  Player.cpp  Player.h  SimpleObject.cpp
src/c/ui/: WorldEditorGui.h
src/c/util/: GameConstants.cpp  GameConstants.h  GenericUtil.cpp  GenericUtil.h  Keybinds.h  Logger.h  Profiler.h
src/c/util/model/: Material.h  Mesh.h  Model.h  ModelLoader.cpp  ModelLoader.h  RenderUtil.cpp  RenderUtil.h  Shader.h
src/c/world/: CollisionLoader.cpp  CollisionLoader.h  CollisionUtil.h  World.cpp  World.h
src/resources/collision_maps/: test.json
src/resources/dev/: card.aseprite  cards.md  gui.aseprite  icons.aseprite  materials.aseprite  texture-documentation.txt
src/resources/shader/background/: fragment_shader.glsl  vertex_shader.glsl
src/resources/shader/card/: fragment_shader.glsl  vertex_shader.glsl
src/resources/shader/default/: fragment_shader.glsl
src/resources/shader/foreground/: fragment_shader.glsl
src/resources/shader/object/: fragment_shader.glsl
src/resources/shader/post/: fragment_shader.glsl
src/resources/shader/shadow/: fragment_shader.glsl  vertex_shader.glsl
src/resources/textures/: texture-documentation.txt
src/resources/textures/_rooms/: entrance.aseprite
src/resources/textures/objects/player/: body.aseprite
src/resources/textures/rooms/: entrance.aseprite
src/resources/textures/ui/: icon.aseprite
